tests/conformance/invalid/03-bad-version/input.sgl
%% skill
name: bad-version-skill
version: 1.0

* fact: version 1.0 is not valid semver — must be major.minor.patch
